# 2025

./: .gitignore  .pdm-python  PRS_2025.md  README.md  cichang.py  get_up.py  github_prs_2025.md  pr.py  pyproject.toml  requirements.txt
.github/workflows/: get_up.yml  new_words.yml
