[project]
name = "2025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "kling-creator>=0.5.0",
    "openai>=1.98.0",
    "pendulum>=3.1.0",
    "pygithub>=2.7.0",
    "pytelegrambotapi>=4.28.0",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "telegramify-markdown>=0.5.1",
    "wcwidth>=0.2.13",
]
